1password/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chittychat
  labels:
    app: chittychat
    environment: production
