1password/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chittychat
  namespace: chittychat
  labels:
    app: chittychat
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: chittychat
